# ash

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  style.qss
src/app/: App.cpp  App.h  IconFactory.cpp  IconFactory.h
src/spotify/spotify_controller/: SpotifyController.cpp  SpotifyController.h
src/spotify/spotify_metadata/: SpotifyMetadata.cpp  SpotifyMetadata.h
src/spotify_controller/: SpotifyController.cpp  SpotifyController.h
